codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_runtime_astra_reasoning.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
expression: "render_bottom_popup(&chat, 100)"
---
  Select Reasoning Level for GPT-6-Astra (Global)


  1. Low              Fast responses with lighter reasoning
  2. Medium           Balances speed and reasoning depth for everyday tasks
› 3. High (default)   Greater reasoning depth for complex problems
  4. Extra high       Extra high reasoning depth for complex problems
  5. More reasoning…  Max and Ultra consume usage limits faster

  enter default · s session · esc back
