codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__bedrock_runtime_models.snap
---
source: tui/src/chatwidget/tests/bedrock_catalog_tests.rs
assertion_line: 42
expression: "render_bottom_popup(&chat, 100)"
---
  Select Model and Effort

› 1. GPT-5.6 Sol (Global) (current)   Older coding model for complex work.
  2. GPT-6-Astra (Global)             Frontier intelligence for the most demanding work.
  3. GPT-5.6 Terra (Global)           Older balanced model for straightforward work.
  4. GPT-5.6 Luna (Global)            Older fast and efficient model.
  5. GPT-5.6 Sol (US cross-region)    Older coding model for complex work.
  6. GPT-6-Astra (US cross-region)    Frontier intelligence for the most demanding work.
  7. GPT-5.6 Terra (US cross-region)  Older balanced model for straightforward work.
  8. GPT-5.6 Luna (US cross-region)   Older fast and efficient model.

  enter select · esc back
