codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__collaboration_modes_popup.snap
---
source: tui/src/chatwidget/tests/plan_mode.rs
expression: popup
---
  Select Collaboration Mode
  Pick a collaboration preset.

› 1. Default (current)
  2. Plan
  3. Continuous

  Press enter to confirm or esc to go back
