codex-rs/tui/src/chatwidget/snapshots/codex_tui__chatwidget__tests__experimental_features_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Experimental features
  Toggle experimental features. Changes are saved to config.toml.

› [ ] Terminal resize reflow  Rebuild Codex-owned transcript scrollback when
                              the terminal width changes.
  [x] Shell tool              Allow the model to run shell commands.

  Press space to select or enter to save for next conversation
